# reaper_webview

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  api.h  api.mm  filelist.txt  globals.h  globals.mm  helpers.h  helpers.mm  log.h  main.cpp  main.mm  main.rc  predef.h  reaper_webview_pch.h  resource.h  resources.rc  webview.h  webview_darwin.mm  webview_mac.mm  webview_win.cpp
.github/workflows/: build.yml
Example/: FRZZ_test_ctxmenu.lua  FRZZ_test_webview.lua  test.lua
reaper-plugins/reaper_csurf/: res.rc
reaper-sdk/reaper-plugins/reaper_csurf/: reaper_csurf.vcxproj
tools/: compile_resources.py
